kubernetes/apps/observability/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: observability
      path: /api/health
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - grafana.${SECRET_DOMAIN} # yayamlls-disable-line
  rules:
    - backendRefs:
        - name: grafana
          port: 80
